; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_be-secure-openssl.c_ssl_protocol_version_to_openssl.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_be-secure-openssl.c_ssl_protocol_version_to_openssl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TLS1_VERSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"%s setting %s not supported by this build\00", align 1
@TLS1_1_VERSION = common dso_local global i32 0, align 4
@TLS1_2_VERSION = common dso_local global i32 0, align 4
@TLS1_3_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @ssl_protocol_version_to_openssl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssl_protocol_version_to_openssl(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %15 [
    i32 128, label %9
    i32 129, label %10
    i32 132, label %12
    i32 131, label %13
    i32 130, label %14
  ]

9:                                                ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

10:                                               ; preds = %3
  %11 = load i32, i32* @TLS1_VERSION, align 4
  store i32 %11, i32* %4, align 4
  br label %22

12:                                               ; preds = %3
  br label %15

13:                                               ; preds = %3
  br label %15

14:                                               ; preds = %3
  br label %15

15:                                               ; preds = %3, %14, %13, %12
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @GetConfigOption(i8* %18, i32 0, i32 0)
  %20 = call i32 @errmsg(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %17, i32 %19)
  %21 = call i32 @ereport(i32 %16, i32 %20)
  store i32 -1, i32* %4, align 4
  br label %22

22:                                               ; preds = %15, %10, %9
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i32) #1

declare dso_local i32 @GetConfigOption(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
